Revision history for GLPI agent

1.2 not yet released

core:
* better error reporting on internal http client error

inventory:
* Use uts.name for Proxmox lxc containers
* Support customized AnyDesk client as remote management inventory on unix/linux

collect:
* Make collect task more verbose when debug is enabled

ssl-server-plugin:
* Fix: Support closing forked SSL connections without shutdown SSL to support Proxy server plugin
* Bump version to 1.1

1.1 Fri, 04 Feb 2022

core:
* Define DateTime perl library as a requirement
* Fix: Replace JSON requirement by Cpanel::JSON::XS as JSON is not thread-safe
* Fix wrong next run date update after a long computer shutdown
* Few optimizations
* Support standard empty XML reply as server response

netdiscovery/netinventory:
* Make tasks compatible with GLPI 10 if GlpiInventory plugin is also installed
 - if that case, server URL should be set with:
  * /plugins/glpiinventory if the plugin has been manually installed in /plugins
  * /marketplace/glpiinventory if the plugin has been installed via marketplace
* Fix: Fix expiration time support to avoid aborting on legit short run
* Updated sysobject.ids
* Bump NetDiscovery task version to 5.0
* Bump NetInventory task version to 5.0

inventory:
* Fix #44: Avoid double utf-8 encoding while sending JSON
* Fix #47: Problem related to expected date format in software inventory
* Fix: Make deprecated XML format compatible with GLPI 10 XML to JSON converter
* solaris: Add IPv6 addressing inventory support
* solaris: Add software install date and size inventory support
* Support customized AnyDesk client as remote management inventory on win32
* Update MongoDB database inventory
* Support Mysql & Porstgresql connection timeout on database inventory
* JSON could be modified following server version expected format
* Ad ssl-cert-file option support
* Updated pci.ids to 2022.01.28 version
* Updated usb.ids to 2021.12.24 version

remoteinventory: