@@ -1,0 +1,2 @@
+inventory_loc=resources/generic/databases/ora1910-ora195-aix
+inst_group=oinstall
